# todolist

./: .gitignore  README.md  TODO.md  pyproject.toml  schema.json
BACKEND/core_api/: models.py
BACKEND/todolist/: settings.py
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_task_completed.py
backend/core_api/: admin.py
backend/todolist/: urls.py
core_api/: serializers.py  urls.py  views.py
core_api/migrations/: 0003_alter_task_description.py
frontend/: forms.py  package-lock.json  urls.py  views.py  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Footer.jsx  Header.jsx  Main.jsx
frontend/templates/: base.html
frontend/templates/frontend/: index.html  task_detail.html  task_form.html  task_list.html
public/: urls.py  views.py
server/: settings.py  urls.py
static/css/: custom.css
templates/: base.html
templates/frontend/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
templates/public/: task_confirm_delete.html  task_detail.html  task_list.html
todolist/: settings.py  urls.py
todolist-frontend/: package-lock.json  package.json
